volexc/tests/ui/mapkey_message_simple.typescript.out
Error: invalid map key type: messages cannot be used as map keys in TypeScript
    ╭─[mapkey_message_simple.vol:11:12]
    │
 11 │     data: {Key:string}
    │            ─┬─  
    │             ╰─── message 'Key' used here
────╯